--- a/homepage.css
+++ b/homepage.css
@@ -1,21 +1,36 @@
-.intro_content {
-  position: fixed;
+.intro_container {
   display: flex;
-  width: 100%;
-  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .intro_media_content {
   flex: 1;
-  width: 100%;
-  top: 0;
+  height: 100vh;
+  width: 100vh;
+  -o-object-position: center;
+     object-position: center;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.intro_media_content_spacer {
+  height: 100vh;
+  width: 100vw;
+  position: relative;
+  z-index: -100;
 }
 
 .intro_scroll_down_div {
   display: flex;
   flex-direction: column;
+  width: 100vw;
   position: fixed;
   bottom: 4%;
+  justify-content: center;
+  align-items: center;
 }
 .intro_scroll_down_div .scroll_arrow {
   height: 40px;
@@ -27,15 +42,6 @@
   color: white;
   font-size: 14px;
   font-weight: 200;
-}
-
-.spacing_div {
-  display: flex;
-  width: 100%;
-}
-
-.spacer_image {
-  width: 100%;
 }
 
 .main_div {
@@ -108,7 +114,7 @@
   display: flex;
   flex-direction: column;
   padding-left: 3%;
-  padding-right: 25px;
+  padding-right: 2%;
 }
 .house_intro_container .room_intro_pic_side,
 .room_intro_container .room_intro_pic_side {
@@ -118,9 +124,18 @@
 .room_intro_container img {
   flex: 1;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 1%;
 }
 
+@media only screen and (max-width: 600px) {
+  .house_intro_container {
+    display: block;
+  }
+  .house_intro_pic_side {
+    padding: 0;
+    background-color: rgb(126, 254, 7);
+  }
+}
 .house_intro_text_side,
 .room_intro_text_side {
   flex: 1;
