--- a/homepage.scss
+++ b/homepage.scss
@@ -1,21 +1,36 @@
-.intro_content {
-    position: fixed;
+.intro_container {
     display: flex;
-    width: 100%;
-    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .intro_media_content {
     flex: 1;
-    width: 100%;
-    top: 0;
+    height: 100vh;
+    width: 100vh;
+    object-position: center;
+    object-fit: cover;
 }
+
+.intro_media_content_spacer {
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    z-index: -100;
+}
+
+
 
 .intro_scroll_down_div {
     display: flex;
     flex-direction: column;
+    width: 100vw;
     position: fixed;
     bottom: 4%;
+    justify-content: center;
+    align-items: center;
 
     .scroll_arrow {
         height: 40px;
@@ -29,15 +44,6 @@
         font-size: 14px;
         font-weight: 200;
     }
-}
-
-.spacing_div {
-    display: flex;
-    width: 100%;
-}
-
-.spacer_image {
-    width: 100%;
 }
 
 
@@ -118,7 +124,7 @@
         display: flex;
         flex-direction: column;
         padding-left: 3%;
-        padding-right: 25px;
+        padding-right: 2%;
     }
 
     .room_intro_pic_side {
@@ -128,9 +134,21 @@
     img {
         flex: 1;
         width: 100%;
-        margin-bottom: 10px;
+        margin-bottom: 1%;
     }
 }
+
+@media only screen and (max-width: 600px) {
+    .house_intro_container {
+        display: block;
+    }
+
+    .house_intro_pic_side {
+        padding: 0;
+        background-color: rgb(126, 254, 7);
+    }
+}
+    
 
 .house_intro_text_side,
 .room_intro_text_side {
