--- a/homepage.scss
+++ b/homepage.scss
@@ -144,7 +144,7 @@
     }
 
     .house_intro_pic_side {
-        padding: 0;
+        padding-left: 0;
         background-color: rgb(126, 254, 7);
     }
 }
