--- a/homepage.css
+++ b/homepage.css
@@ -101,6 +101,12 @@
   padding-top: 0;
 }
 
+.house_intro_pic_side,
+.room_intro_pic_side {
+  padding-left: 3%;
+  padding-right: 2%;
+}
+
 .house_intro_container,
 .room_intro_container {
   display: flex;
@@ -113,27 +119,36 @@
   flex: 2;
   display: flex;
   flex-direction: column;
-  padding-left: 3%;
-  padding-right: 2%;
 }
-.house_intro_container .room_intro_pic_side,
-.room_intro_container .room_intro_pic_side {
-  padding-right: 3%;
+
+.house_intro_container {
+  flex-direction: row-reverse;
 }
-.house_intro_container img,
-.room_intro_container img {
-  flex: 1;
+
+.house_homepage_img,
+.rooms_homepage_img {
   width: 100%;
-  margin-bottom: 1%;
+  margin-bottom: 3%;
 }
 
 @media only screen and (max-width: 600px) {
-  .house_intro_container {
+  .house_intro_container,
+  .room_intro_container {
     display: block;
   }
-  .house_intro_pic_side {
+  .house_intro_pic_side,
+  .room_intro_pic_side {
     padding-left: 0;
-    background-color: rgb(126, 254, 7);
+    padding-right: 0;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .house_homepage_img,
+  .rooms_homepage_img {
+    height: 300px;
+    width: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 .house_intro_text_side,
