--- a/homepage.scss
+++ b/homepage.scss
@@ -113,6 +113,12 @@
 }
 
 
+.house_intro_pic_side,
+.room_intro_pic_side {
+    padding-left: 3%;
+    padding-right: 2%;    
+}
+
 .house_intro_container,
 .room_intro_container {
     display: flex;
@@ -123,32 +129,41 @@
         flex: 2;
         display: flex;
         flex-direction: column;
-        padding-left: 3%;
-        padding-right: 2%;
+    }
+}
+
+.house_intro_container {
+    flex-direction: row-reverse;
+}
+
+.house_homepage_img,
+.rooms_homepage_img {
+    width: 100%;
+    margin-bottom: 3%;
+}
+
+@media only screen and (max-width: 600px) {
+    .house_intro_container,
+    .room_intro_container {
+        display: block;
     }
 
+    .house_intro_pic_side,
     .room_intro_pic_side {
-        padding-right: 3%;
-    }
-
-    img {
-        flex: 1;
-        width: 100%;
-        margin-bottom: 1%;
+        padding-left: 0;
+        padding-right: 0;
     }
 }
 
 @media only screen and (max-width: 600px) {
-    .house_intro_container {
-        display: block;
-    }
-
-    .house_intro_pic_side {
-        padding-left: 0;
-        background-color: rgb(126, 254, 7);
+    .house_homepage_img,
+    .rooms_homepage_img {
+        height: 300px;
+        width: 100%;
+        object-fit: cover;
     }
 }
-    
+
 
 .house_intro_text_side,
 .room_intro_text_side {
