--- a/homepage.css
+++ b/homepage.css
@@ -101,6 +101,21 @@
   padding-top: 0;
 }
 
+.onlymobile_intro_pic {
+  display: none;
+  padding: 2%;
+  margin-bottom: 6%;
+}
+
+.mobile_pic {
+  width: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+  .onlymobile_intro_pic {
+    display: flex;
+  }
+}
 .house_intro_pic_side,
 .room_intro_pic_side {
   padding-left: 3%;
