--- a/header.scss
+++ b/header.scss
@@ -123,7 +123,7 @@
 
 
 
-.hamburger_icon {
+.hamburger_icon, .x_mark {
     align-items: center;
     justify-content: center;
     position: absolute;
@@ -141,6 +141,10 @@
 
 
 @media only screen and (max-width: 950px) {
+    #changeable_header {
+        height: 75px;
+    }
+    
     .right_section { 
         display: none;
     }
@@ -152,11 +156,17 @@
     .hamburger_icon {
         display: flex;
         z-index: 10000;
+        margin-top: 3%;
+        margin-right: 3%;
     }
 
     .fajntajm_logo {
         width: 80px;
-        margin-left: 5%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin-top: 3%;
+        margin-left: 3%;
     }
 
     .mid_section {
