--- a/header.css
+++ b/header.css
@@ -21,8 +21,7 @@
 .fajntajm_logo {
   flex: 1;
   width: 130px;
-  margin-left: 10%;
-  margin-top: 10px;
+  margin-left: 3vw;
   transition: 0.25s;
   fill: none;
   stroke: rgb(255, 255, 255);
@@ -56,7 +55,6 @@
 }
 
 .right_section {
-  height: 100%;
   display: flex;
   flex: 1;
   justify-content: flex-end;
@@ -111,10 +109,9 @@
   cursor: pointer;
 }
 
-.hamburger_icon, .x_mark {
+.hamburger_icon {
   align-items: center;
   justify-content: center;
-  position: absolute;
   z-index: 1000;
   top: 0;
   right: 0;
@@ -133,23 +130,22 @@
   }
   .right_section {
     display: none;
+    position: fixed;
+    margin-left: 20px;
+    height: 15%;
+    bottom: 0;
   }
   .hamburger {
-    padding-right: 5%;
+    display: flex;
+    align-items: center;
   }
   .hamburger_icon {
+    flex: 1;
     display: flex;
-    z-index: 10000;
-    margin-top: 3%;
-    margin-right: 3%;
+    margin-right: 3vw;
   }
   .fajntajm_logo {
     width: 80px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin-top: 3%;
-    margin-left: 3%;
   }
   .mid_section {
     flex-direction: column;
@@ -162,13 +158,22 @@
     left: 100%;
     right: 0;
     margin: 0;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
   }
   .mid_section li a {
     color: rgb(0, 0, 0);
     display: flex;
-    font-size: 50px;
+    font-size: 5vh;
     margin-top: 10%;
+  }
+  .language a {
+    color: rgb(0, 0, 0);
+  }
+  .ig_logo_header {
+    fill: black;
+  }
+  .fb_logo_header {
+    fill: black;
   }
 }
 @media only screen and (max-width: 410px) {
@@ -204,6 +209,22 @@
   fill: black;
 }
 
+.hamburger_icon_color_change_bl {
+  fill: black;
+}
+
 .menu_open {
   left: 0;
+}
+
+.right_section_open {
+  display: flex;
+}
+
+.scroll-locked {
+  overflow: hidden;
+}
+
+.languages_color_change_hamburger {
+  color: black;
 }/*# sourceMappingURL=header.css.map */
