--- a/header.css
+++ b/header.css
@@ -23,9 +23,7 @@
   width: 130px;
   margin-left: 3vw;
   transition: 0.25s;
-  fill: none;
-  stroke: rgb(255, 255, 255);
-  stroke-miterlimit: 10;
+  fill: white;
 }
 
 .fajntajm_logo:hover {
@@ -182,7 +180,7 @@
   }
 }
 .logo_color_change {
-  stroke: black;
+  fill: black;
 }
 
 .header_bg_color_change {
