--- a/homepage.scss
+++ b/homepage.scss
@@ -9,8 +9,8 @@
 .intro_media_content {
     flex: 1;
     height: 100vh;
-    width: 100vh;
-    object-position: center;
+    width: 100vw;
+    object-position: center center;
     object-fit: cover;
 }
 
@@ -33,7 +33,7 @@
     align-items: center;
 
     .scroll_arrow {
-        height: 40px;
+        width: 1vw;
         margin-top: 10px;
     }
     
@@ -41,7 +41,7 @@
         flex: 1;
         font-family: Hanken Grotesk;
         color: white;
-        font-size: 14px;
+        font-size: 1vw;
         font-weight: 200;
     }
 }
@@ -61,7 +61,7 @@
 }
 
 .book {
-    height: 80px;
+    height: 48px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -71,8 +71,8 @@
 
 .book_link {
     font-family: Hanken Grotesk;
-    font-weight: 100;
-    font-size: 20px;
+    font-weight: 300;
+    font-size: 16px;
     text-decoration: none;
     color: rgb(255, 255, 255);
     background-color: black;
@@ -94,7 +94,6 @@
     height: 350px;
 
     h1 {
-        width: 600px;
         text-align: center;
         font-weight: 600;
         font-size: 28px;
@@ -103,7 +102,6 @@
     }
 
     p {
-        width: 600px;
         text-align: center;
         font-weight: 400;
         font-size: 28px;
@@ -284,11 +282,34 @@
 
     p {
         flex: 1;
-        font-size: 28px;
+        font-size: 2vw;
         font-weight: 200;
     }
 
     .comments_names {
         font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    
+    .intro_scroll_down_div {
+        
+        .scroll_arrow {
+            width: 3vw;
+        }
+        
+        .scroll_text {
+            font-size: 3vw;
+        }
+    }
+    
+
+    .book {
+        height: 15vw;
+
+        .book_link {
+            font-size: 5vw;
+        }
     }
 }
