--- a/footer.css
+++ b/footer.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   width: 200px;
-  row-gap: 50px;
+  row-gap: 30px;
 }
 .column_1 div {
   flex: 1;
@@ -69,4 +69,23 @@
 .column_3 img:hover {
   opacity: 0.5;
   width: 17.5vw;
+}
+
+@media only screen and (max-width: 480px) {
+  .footer_div {
+    flex-direction: column;
+  }
+  .footer_div .column_1 {
+    row-gap: 15px;
+  }
+  .footer_div .column_2 {
+    justify-content: start;
+    padding-bottom: 25px;
+  }
+  .footer_div .column_2 .footer_socials img {
+    width: 18px;
+  }
+  .footer_div .column_3 img {
+    width: 100px;
+  }
 }/*# sourceMappingURL=footer.css.map */
