--- a/footer.scss
+++ b/footer.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     width: 200px;
-    row-gap: 50px;
+    row-gap: 30px;
 
     div {
         flex: 1;
@@ -82,5 +82,33 @@
         width: 17.5vw;
     }
 
+
+}
+
+@media only screen and (max-width: 480px) {
+    .footer_div {
+        flex-direction: column;
+
+        .column_1 {
+            row-gap: 15px;
+        }
+
+        .column_2 {
+            justify-content: start;
+            padding-bottom: 25px;
+
+            .footer_socials {
+                img {
+                    width: 18px;
+                }
+            }
+        }
+
+        .column_3 {
+            img {
+                width: 100px;
+            }
+        }
+    }
 
 }
