--- a/header.scss
+++ b/header.scss
@@ -144,7 +144,8 @@
     .right_section {
         display: none; 
         position: fixed;
-        margin-left: 20px;
+        margin-left: 30px;
+        padding-bottom: 5vh;
         height: 15%;
         bottom: 0;
     }
@@ -164,6 +165,7 @@
     .fajntajm_logo {
         width: 15vw;
         margin-left: 9vw;
+        margin-top: 1.5vw;
     }
 
     .mid_section {
@@ -171,7 +173,7 @@
         position: fixed;
         align-items: flex-start;
         justify-content: flex-start;
-        padding-top: 7%;
+        padding-top: 10%;
         top: 0;
         bottom: 0;
         left: 100%;
@@ -185,11 +187,14 @@
         display: flex;
         font-size: 5vh;
         margin-top: 10%;
+        margin: 3vh;
     }
 
     .right_section {
         width: 100vw;
-        justify-content: start;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-direction: column;
     }
 
     .language a {
@@ -203,17 +208,16 @@
     }
 
     .social_sites {
-        margin-left: 20vw;
+        column-gap: 5vw;
+        margin-left: 0;
     }
 
-    .ig_logo_header {
-        fill: black;
-        width: 5vw;
-    }
-
+    .ig_logo_header,
     .fb_logo_header {
         fill: black;
+        width: 2vh;
     }
+
 }
 
 @media only screen and (max-width: 480px) {
@@ -230,16 +234,14 @@
     }
 
     .mid_section li a {
-        font-size: 10vw;
+        font-size: 5vh;
+        margin: 3vh;
     }
 
     .language a {
         font-size: 5vw;
     }
 
-    .social_sites {
-        margin-left: 30vw;
-    }
 }
 
 
