--- a/homepage.scss
+++ b/homepage.scss
@@ -312,16 +312,12 @@
 .comments_conatiner_row2 {
     display: flex;
     column-gap: 50px;
+}
 
-    p {
-        flex: 1;
-        font-size: 18px;
-        font-weight: 200;
-    }
-
-    .comments_names {
-        font-size: 18px;
-    }
+#comment {
+    flex: 1;
+    font-size: 18px;
+    font-weight: 200;
 }
 
 @media only screen and (max-width: 600px) {
@@ -429,5 +425,23 @@
 
     #wellness_absolute {
         display: none;
+    }
+
+    #comments_conatiner_row2 {
+        overflow: auto;
+        scroll-snap-type: x mandatory;
+        column-gap: 4%;
+    }
+
+    #comments_conatiner_row2::-webkit-scrollbar {
+        display: none;
+    }
+
+
+    #comment {
+        width: 100%;
+        flex: initial;
+        flex-shrink: 0;
+        scroll-snap-align: start;
     }
 }
