everything is working here

--- a/homepage.css
+++ b/homepage.css
@@ -386,6 +386,8 @@
     scroll-snap-type: x mandatory;
     -moz-column-gap: 4%;
          column-gap: 4%;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
   #comments_conatiner_row2::-webkit-scrollbar {
     display: none;
@@ -395,5 +397,8 @@
     flex: initial;
     flex-shrink: 0;
     scroll-snap-align: start;
+  }
+  #comment:checked {
+    background-color: red;
   }
 }/*# sourceMappingURL=homepage.css.map */
