--- a/footer.css
+++ b/footer.css
@@ -37,7 +37,7 @@
 .column_2 {
   padding-left: 0;
   display: flex;
-  align-items: end;
+  align-items: flex-end;
   justify-content: center;
   padding-bottom: 15px;
   padding-top: 18px;
@@ -58,7 +58,7 @@
   flex: 1;
   display: flex;
   justify-content: space-around;
-  align-items: end;
+  align-items: flex-end;
   padding-bottom: 10px;
 }
 .column_3 img {
