--- a/footer.scss
+++ b/footer.scss
@@ -43,7 +43,7 @@
 .column_2 {
     padding-left: 0;
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     justify-content: center;
     padding-bottom: 15px;
     padding-top: 18px;
@@ -68,7 +68,7 @@
     flex: 1;
     display: flex;
     justify-content: space-around;
-    align-items: end;
+    align-items: flex-end;
     padding-bottom: 10px;
 
     img {
