--- a/header.scss
+++ b/header.scss
@@ -150,10 +150,76 @@
         bottom: 0;
     }
 
+
     .hamburger {
-        display: flex;
-        align-items: center;
+        cursor: pointer;
     }
+
+    #hamburger_checkbox {
+        display: none;
+    }
+
+    .bar {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        width: 4vw;
+        height: 2vw;
+    }
+
+    .bar .fill_empty {
+        width: 100%;
+        height: 200%;
+    }
+
+    .bar .top {
+        top: 0;
+        height: 1px;
+        width: 80%;
+        background: #000000;
+        position: absolute;
+        transition: 0.3s ease;
+    }
+
+    .bar .middle {
+        top: 50%;
+        height: 1px;
+        width: 80%;
+        background: #000000;
+        position: absolute;
+        transition: 0.3s ease;
+    }
+
+    .bar .bottom {
+        top: 100%;
+        height: 1px;
+        width: 80%;
+        background: #000000;
+        position: absolute;
+        transition: 0.3s ease;
+    }
+
+    input[type="checkbox"]:checked ~ .bar .top {
+        width: 80%;
+        transform: rotate(-405deg);
+        transform-origin: center;
+        top: 50%;
+    }
+
+    input[type="checkbox"]:checked ~ .bar .bottom {
+        width: 80%;
+        transform: rotate(-495deg);
+        transform-origin: center;
+        top: 50%;
+    }
+
+    input[type="checkbox"]:checked ~ .bar .middle {
+        transform: translateX(20px);
+        opacity: 0;
+    }
+
+
+    
 
     .hamburger_icon {
         flex: 1;
