--- a/header.css
+++ b/header.css
@@ -107,6 +107,10 @@
   cursor: pointer;
 }
 
+#hamburger_checkbox {
+  display: none;
+}
+
 .hamburger_icon {
   align-items: center;
   justify-content: center;
@@ -140,54 +144,58 @@
   #hamburger_checkbox {
     display: none;
   }
-  .bar {
+  .bars {
     display: flex;
     justify-content: center;
     position: relative;
     width: 4vw;
     height: 2vw;
   }
-  .bar .fill_empty {
+  .fill_empty_bar {
     width: 100%;
     height: 200%;
+    position: relative;
+    z-index: 1000;
   }
-  .bar .top {
+  .top_bar {
     top: 0;
     height: 1px;
     width: 80%;
-    background: #000000;
+    background-color: #ffffff;
     position: absolute;
     transition: 0.3s ease;
   }
-  .bar .middle {
+  .middle_bar {
     top: 50%;
     height: 1px;
     width: 80%;
-    background: #000000;
+    background-color: #ffffff;
     position: absolute;
     transition: 0.3s ease;
   }
-  .bar .bottom {
+  .bottom_bar {
     top: 100%;
     height: 1px;
     width: 80%;
-    background: #000000;
+    background-color: #ffffff;
     position: absolute;
     transition: 0.3s ease;
   }
-  input[type=checkbox]:checked ~ .bar .top {
+  input[type=checkbox]:checked ~ .bars .top_bar {
     width: 80%;
     transform: rotate(-405deg);
     transform-origin: center;
     top: 50%;
+    background: black;
   }
-  input[type=checkbox]:checked ~ .bar .bottom {
+  input[type=checkbox]:checked ~ .bars .bottom_bar {
     width: 80%;
     transform: rotate(-495deg);
     transform-origin: center;
     top: 50%;
+    background: black;
   }
-  input[type=checkbox]:checked ~ .bar .middle {
+  input[type=checkbox]:checked ~ .bars .middle_bar {
     transform: translateX(20px);
     opacity: 0;
   }
@@ -311,4 +319,8 @@
 
 .languages_color_change_hamburger {
   color: black;
+}
+
+.bars_color_change {
+  background: red;
 }/*# sourceMappingURL=header.css.map */
