--- a/header.scss
+++ b/header.scss
@@ -155,6 +155,7 @@
 
     .hamburger {
         cursor: pointer;
+        margin-right: 3vw;
     }
 
     #hamburger_checkbox {
@@ -223,18 +224,10 @@
     }
 
     input[type="checkbox"]:checked ~ .bars .middle_bar {
-        transform: translateX(20px);
+        transform: translateX(25%);
         opacity: 0;
     }
 
-
-
-    .hamburger_icon {
-        flex: 1;
-        display: flex;
-        margin-right: 5vw;
-        width: 3vw;
-    }
 
     .fajntajm_logo {
         width: 15vw;
@@ -303,10 +296,6 @@
         width: 28vw;
     }
 
-    .hamburger_icon {
-        width: 6vw;
-    }
-
     .mid_section li a {
         font-size: 5vh;
         margin: 3vh;
@@ -314,6 +303,11 @@
 
     .language a {
         font-size: 5vw;
+    }
+
+    .bars {
+        width: 8vw;
+        height: 4vw;
     }
 
 }
@@ -341,14 +335,6 @@
 }
 
 .fb_logo_color_change {
-    fill: black;
-}
-
-.hamburger_icon_color_change {
-    fill: black;
-}
-
-.hamburger_icon_color_change_bl {
     fill: black;
 }
 
