--- a/homepage.scss
+++ b/homepage.scss
@@ -405,6 +405,10 @@
         }
     }
 
+    #house_homepage_img {
+        display: none;
+    }
+
     .wellness_intro_container {
     padding-bottom: 5vw;
 
