--- a/general.css
+++ b/general.css
@@ -5,3 +5,8 @@ body {
     font-weight: 200;
 }
 
+@media only screen and (max-width: 600px) {
+    body {
+        background-color: black;
+    }
+}
